--- a/index.html
+++ b/index.html
@@ -36,29 +36,18 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-fluid px-5">
-      <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
-
-
-
+      
       <div id="hour-09" class="row time-block" >
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea id="9" class="col-8 col-md-10 description textarea storage"></textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 9 aria-label="save">
+        <textarea id = "9" class = "col-8 col-md-10 description" rows = "3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 9 aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </div>
 
       <div id="hour-10" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea id= "10" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 10 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 10 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
@@ -66,56 +55,56 @@
       <div id="hour-11" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea id= "11" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 11 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 11 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-12" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
         <textarea id= "12" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 12 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 12 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-13" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">13AM</div>
         <textarea id= "13" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1"data-hour = 13 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1"btnHour-Id = 13 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-14" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">14AM</div>
         <textarea id= "14" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 14 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 14 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-15" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">15AM</div>
         <textarea id= "15" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 15 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 15 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-16" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">16AM</div>
         <textarea id= "16" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 16 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 16 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-17" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">17AM</div>
         <textarea id= "17"  class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 17 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 17 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-18" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">18AM</div>
         <textarea id= "18"  class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" data-hour = 18 aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" btnHour-Id = 18 aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
@@ -123,9 +112,7 @@
     </div>
       
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-    crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" ></script>
 
     <script src="./assets/script.js"></script>
   </body>
